--- a/app/src/main/res/layout/custom_note_item.xml
+++ b/app/src/main/res/layout/custom_note_item.xml
@@ -79,7 +79,8 @@
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:layout_margin="3dp"
-                        android:gravity="top"/>
+                        android:gravity="top"
+                        android:maxLength="256"/>
 
             </LinearLayout>
 
