--- a/app/src/main/res/layout/fragment_to_do.xml
+++ b/app/src/main/res/layout/fragment_to_do.xml
@@ -28,6 +28,22 @@
                 app:layout_constraintRight_toRightOf="parent" />
 
         <com.google.android.material.floatingactionbutton.FloatingActionButton
+                android:id="@+id/fab_upload_todos"
+                android:layout_height="wrap_content"
+                android:layout_width="wrap_content"
+                android:layout_marginRight="16dp"
+                android:layout_marginEnd="16dp"
+                android:layout_marginBottom="16dp"
+                android:src="@drawable/ic_upload"
+                android:visibility="invisible"
+
+                app:maxImageSize="30dp"
+                app:backgroundTint="@color/colorPrimary"
+                app:fabSize="normal"
+                app:layout_constraintBottom_toTopOf="@id/fab_add_entry"
+                app:layout_constraintEnd_toEndOf="parent"/>
+
+        <com.google.android.material.floatingactionbutton.FloatingActionButton
                 android:id="@+id/fab_add_entry"
                 android:layout_height="wrap_content"
                 android:layout_width="wrap_content"
@@ -35,6 +51,22 @@
                 android:layout_marginEnd="16dp"
                 android:layout_marginBottom="16dp"
                 android:src="@drawable/ic_add_entry"
+                android:visibility="invisible"
+
+                app:maxImageSize="30dp"
+                app:backgroundTint="@color/colorPrimary"
+                app:fabSize="normal"
+                app:layout_constraintBottom_toTopOf="@id/fab_open_others"
+                app:layout_constraintEnd_toEndOf="parent"/>
+
+        <com.google.android.material.floatingactionbutton.FloatingActionButton
+                android:id="@+id/fab_open_others"
+                android:layout_height="wrap_content"
+                android:layout_width="wrap_content"
+                android:layout_marginRight="16dp"
+                android:layout_marginEnd="16dp"
+                android:layout_marginBottom="16dp"
+                android:src="@drawable/ic_widgets"
 
                 app:maxImageSize="30dp"
                 app:backgroundTint="@color/colorPrimary"
