--- a/app/src/main/res/xml/fragment_settings.xml
+++ b/app/src/main/res/xml/fragment_settings.xml
@@ -4,6 +4,7 @@
     <PreferenceCategory android:title="@string/server_category">
         <CheckBoxPreference android:defaultValue="false"
                             android:key="server_enabled_pref"
+                            android:summary="@string/server_sum_upload"
                             android:title="@string/enable_server"/>
         <EditTextPreference android:title="@string/server_addr"
                             android:key="server_addr_pref"
@@ -19,6 +20,7 @@
                             android:defaultValue="DoDo"/>
         <Preference android:title="@string/profile_creation_date"
                     android:key="profile_creation_date_pref"
-                    android:defaultValue="01.01.2000"/>
+                    android:defaultValue="01.01.2000"
+                    android:enabled="false"/>
     </PreferenceCategory>
 </PreferenceScreen>
