--- a/app/src/main/res/layout/profile_dialog.xml
+++ b/app/src/main/res/layout/profile_dialog.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
-                                                   android:layout_width="match_parent"
+                                                   xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
                                                    android:layout_height="match_parent"
                                                    xmlns:app="http://schemas.android.com/apk/res-auto">
     <TextView android:id="@+id/dialog_prof_info_text"
@@ -9,6 +9,7 @@
               android:layout_margin="10dp"
               android:text="@string/dial_prof_info_text"
               android:textStyle="bold"
+              android:gravity="start"
 
               app:layout_constraintTop_toTopOf="parent"
               app:layout_constraintStart_toStartOf="parent"
@@ -20,6 +21,7 @@
               android:layout_margin="10dp"
               android:text="@string/dial_prof_label_id"
               android:textStyle="bold"
+              android:gravity="start"
 
               app:layout_constraintTop_toBottomOf="@id/dialog_prof_info_text"
               app:layout_constraintStart_toStartOf="parent"
@@ -29,6 +31,7 @@
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               android:layout_margin="10dp"
+              android:gravity="start"
 
               app:layout_constraintTop_toBottomOf="@id/dialog_prof_label_id"
               app:layout_constraintStart_toStartOf="parent"
@@ -40,6 +43,7 @@
               android:layout_margin="10dp"
               android:text="@string/dial_prof_label_name"
               android:textStyle="bold"
+              android:gravity="start"
 
               app:layout_constraintTop_toBottomOf="@id/dialog_prof_id"
               app:layout_constraintStart_toStartOf="parent"
@@ -53,6 +57,7 @@
               android:inputType="textCapCharacters"
               android:maxLength="16"
               android:layout_margin="10dp"
+              android:gravity="start"
 
               app:layout_constraintTop_toBottomOf="@id/dialog_prof_label_name"
               app:layout_constraintStart_toStartOf="parent"
@@ -64,6 +69,7 @@
               android:layout_margin="10dp"
               android:text="@string/dial_prof_label_pass"
               android:textStyle="bold"
+              android:gravity="start"
 
               app:layout_constraintTop_toBottomOf="@id/dialog_prof_name"
               app:layout_constraintStart_toStartOf="parent"
@@ -77,6 +83,7 @@
               android:inputType="textPassword"
               android:maxLength="32"
               android:layout_margin="10dp"
+              android:gravity="start"
 
               app:layout_constraintTop_toBottomOf="@id/dialog_prof_label_pass"
               app:layout_constraintStart_toStartOf="parent"
@@ -88,6 +95,7 @@
               android:layout_margin="10dp"
               android:text="@string/dial_prof_label_reppass"
               android:textStyle="bold"
+              android:gravity="start"
 
               app:layout_constraintTop_toBottomOf="@id/dialog_prof_pass"
               app:layout_constraintStart_toStartOf="parent"
@@ -101,10 +109,11 @@
               android:inputType="textPassword"
               android:maxLength="32"
               android:layout_margin="10dp"
+              android:gravity="start"
 
               app:layout_constraintTop_toBottomOf="@id/dialog_prof_label_rep_pass"
               app:layout_constraintStart_toStartOf="parent"
-              app:layout_constraintEnd_toEndOf="parent"/>
+              app:layout_constraintEnd_toEndOf="parent" tools:ignore="MissingPrefix"/>
 
 
     <Button android:id="@+id/dialog_prof_leave_button"
