--- a/app/src/main/res/layout/fragment_log_in.xml
+++ b/app/src/main/res/layout/fragment_log_in.xml
@@ -1,6 +1,82 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
-                                                   android:layout_width="match_parent"
-                                                   android:layout_height="match_parent">
+<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+             xmlns:app="http://schemas.android.com/apk/res-auto"
+             xmlns:tools="http://schemas.android.com/tools"
+             android:layout_width="match_parent"
+             android:layout_height="match_parent"
+             tools:context=".fragments.LogInFragment">
+    <androidx.constraintlayout.widget.ConstraintLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_margin="12dp">
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+        <TextView android:id="@+id/dialog_log_info_text"
+                  android:layout_width="match_parent"
+                  android:layout_height="wrap_content"
+                  android:layout_margin="10dp"
+                  android:text="@string/dial_log_info_text"
+                  android:textStyle="bold"
+
+                  app:layout_constraintTop_toTopOf="parent"/>
+
+
+        <TextView android:id="@+id/dialog_log_label_name"
+                  android:layout_width="match_parent"
+                  android:layout_height="wrap_content"
+                  android:layout_margin="10dp"
+                  android:text="@string/dial_prof_label_name"
+                  android:textStyle="bold"
+
+                  app:layout_constraintTop_toBottomOf="@id/dialog_log_info_text"/>
+
+        <EditText android:id="@+id/dialog_log_name"
+                  android:layout_width="match_parent"
+                  android:layout_height="wrap_content"
+                  android:hint="@string/dial_prof_name_hint"
+                  android:autofillHints=""
+                  android:inputType="text"
+                  android:maxLength="16"
+                  android:layout_margin="10dp"
+
+                  app:layout_constraintTop_toBottomOf="@id/dialog_log_label_name"/>
+
+        <TextView android:id="@+id/dialog_log_label_pass"
+                  android:layout_width="match_parent"
+                  android:layout_height="wrap_content"
+                  android:layout_margin="10dp"
+                  android:text="@string/dial_prof_label_pass"
+                  android:textStyle="bold"
+
+                  app:layout_constraintTop_toBottomOf="@id/dialog_log_name"/>
+
+        <EditText android:id="@+id/dialog_log_pass"
+                  android:layout_width="match_parent"
+                  android:layout_height="wrap_content"
+                  android:hint="@string/dial_prof_pass"
+                  android:autofillHints=""
+                  android:inputType="textPassword"
+                  android:maxLength="32"
+                  android:layout_margin="10dp"
+
+                  app:layout_constraintTop_toBottomOf="@id/dialog_log_label_pass"/>
+
+
+        <Button android:id="@+id/dialog_log_login_button"
+                android:layout_width="128dp"
+                android:layout_height="32dp"
+                android:layout_marginTop="24dp"
+                android:layout_marginBottom="8dp"
+                android:text="@string/dial_log_login"
+                android:background="@drawable/round_corners_left"
+                android:shadowColor="@color/grey"
+                android:shadowDx="10"
+                android:shadowDy="10"
+                android:shadowRadius="10"
+
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@id/dialog_log_pass"
+                app:layout_constraintBottom_toBottomOf="parent"/>
+
+    </androidx.constraintlayout.widget.ConstraintLayout>
+</FrameLayout>
