--- a/app/src/main/res/layout/fragment_log_in.xml
+++ b/app/src/main/res/layout/fragment_log_in.xml
@@ -73,8 +73,25 @@
                 android:shadowDy="10"
                 android:shadowRadius="10"
 
-                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintEnd_toStartOf="@id/dialog_log_signup_button"
                 app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@id/dialog_log_pass"
+                app:layout_constraintBottom_toBottomOf="parent"/>
+
+        <Button android:id="@+id/dialog_log_signup_button"
+                android:layout_width="128dp"
+                android:layout_height="32dp"
+                android:layout_marginTop="24dp"
+                android:layout_marginBottom="8dp"
+                android:text="@string/dial_log_signup"
+                android:background="@drawable/round_corners_left"
+                android:shadowColor="@color/grey"
+                android:shadowDx="10"
+                android:shadowDy="10"
+                android:shadowRadius="10"
+
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toEndOf="@id/dialog_log_login_button"
                 app:layout_constraintTop_toBottomOf="@id/dialog_log_pass"
                 app:layout_constraintBottom_toBottomOf="parent"/>
 
