--- a/app/src/main/res/layout/fragment_sign_up.xml
+++ b/app/src/main/res/layout/fragment_sign_up.xml
@@ -91,9 +91,26 @@
                 android:shadowDy="10"
                 android:shadowRadius="10"
 
-                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintEnd_toStartOf="@+id/dialog_prof_login_button"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@id/dialog_prof_rep_pass"
+                app:layout_constraintBottom_toBottomOf="parent"/>
+
+        <Button android:id="@+id/dialog_prof_login_button"
+                android:layout_width="128dp"
+                android:layout_height="32dp"
+                android:layout_marginTop="24dp"
+                android:layout_marginBottom="8dp"
+                android:text="@string/dial_log_login"
+                android:background="@drawable/round_corners_left"
+                android:shadowColor="@color/grey"
+                android:shadowDx="10"
+                android:shadowDy="10"
+                android:shadowRadius="10"
+
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toEndOf="@id/dialog_prof_submit_button"
+                app:layout_constraintTop_toBottomOf="@+id/dialog_prof_rep_pass"
                 app:layout_constraintBottom_toBottomOf="parent"/>
 
     </androidx.constraintlayout.widget.ConstraintLayout>
