--- a/app/src/main/res/layout/dialog_color_picker.xml
+++ b/app/src/main/res/layout/dialog_color_picker.xml
@@ -7,13 +7,12 @@
 
     <androidx.constraintlayout.widget.ConstraintLayout
             android:layout_width="match_parent"
-            android:minWidth="250dp"
             android:minHeight="325dp"
             android:layout_height="match_parent"
             android:padding="24dp">
 
         <SeekBar android:id="@+id/dialog_red_seekbar"
-                 android:layout_width="match_parent"
+                 android:layout_width="200dp"
                  android:layout_height="wrap_content"
                  android:layout_marginTop="16dp"
                  android:progressDrawable="@drawable/red_seekbar_style"
@@ -26,7 +25,7 @@
                  app:layout_constraintTop_toTopOf="parent"/>
 
         <SeekBar android:id="@+id/dialog_green_seekbar"
-                 android:layout_width="match_parent"
+                 android:layout_width="200dp"
                  android:layout_height="wrap_content"
                  android:layout_marginTop="16dp"
                  android:progressDrawable="@drawable/green_seekbar_style"
@@ -39,7 +38,7 @@
                  app:layout_constraintTop_toBottomOf="@id/dialog_red_seekbar"/>
 
         <SeekBar android:id="@+id/dialog_blue_seekbar"
-                 android:layout_width="match_parent"
+                 android:layout_width="200dp"
                  android:layout_height="wrap_content"
                  android:layout_marginTop="16dp"
                  android:progressDrawable="@drawable/blue_seekbar_style"
