--- a/app/src/main/res/menu/menu_main.xml
+++ b/app/src/main/res/menu/menu_main.xml
@@ -4,5 +4,7 @@
     <item
             android:id="@+id/action_visibility"
             android:orderInCategory="100"
+            android:checkable="true"
+            android:checked="true"
             android:title="@string/action_visibility"/>
 </menu>
