--- a/app/src/main/res/layout/fragment_settings.xml
+++ b/app/src/main/res/layout/fragment_settings.xml
@@ -1,6 +1,73 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
-                                                   android:layout_width="match_parent"
-                                                   android:layout_height="match_parent">
+<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+             xmlns:app="http://schemas.android.com/apk/res-auto"
+             xmlns:tools="http://schemas.android.com/tools"
+             android:layout_width="match_parent"
+             android:layout_height="match_parent"
+             tools:context=".fragments.SettingsFragment">
+    <androidx.constraintlayout.widget.ConstraintLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_margin="12dp">
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+
+        <TextView android:id="@+id/settings_server_con_text"
+                  android:layout_width="wrap_content"
+                  android:layout_height="wrap_content"
+                  android:layout_margin="10dp"
+                  android:text="@string/settings_server_check"
+                  android:textStyle="bold"
+
+                  app:layout_constraintTop_toTopOf="parent"
+                  app:layout_constraintLeft_toLeftOf="parent"/>
+
+        <CheckBox android:id="@+id/settings_server_con"
+                  android:layout_width="wrap_content"
+                  android:layout_height="wrap_content"
+
+                  app:layout_constraintTop_toTopOf="@id/settings_server_con_text"
+                  app:layout_constraintLeft_toRightOf="@id/settings_server_con_text"/>
+
+        <TextView android:id="@+id/settings_server_addr_text"
+                  android:layout_width="wrap_content"
+                  android:layout_height="wrap_content"
+                  android:layout_margin="10dp"
+                  android:text="@string/settings_server_addr"
+                  android:textStyle="bold"
+
+                  app:layout_constraintTop_toBottomOf="@id/settings_server_con"
+                  app:layout_constraintLeft_toLeftOf="parent"/>
+
+        <EditText android:id="@+id/settings_server_addr"
+                  android:layout_width="match_parent"
+                  android:layout_height="wrap_content"
+                  android:hint="@string/settings_server_addr_hint"
+                  android:autofillHints=""
+                  android:inputType="text"
+                  android:maxLength="16"
+                  android:layout_margin="10dp"
+
+                  app:layout_constraintTop_toBottomOf="@id/settings_server_addr_text"
+                  app:layout_constraintLeft_toLeftOf="parent"/>
+
+        <TextView android:id="@+id/settings_profile_id_text"
+                  android:layout_width="wrap_content"
+                  android:layout_height="wrap_content"
+                  android:layout_margin="10dp"
+                  android:text="@string/settings_profile_id"
+                  android:textStyle="bold"
+
+                  app:layout_constraintTop_toBottomOf="@id/settings_server_addr"
+                  app:layout_constraintLeft_toLeftOf="parent"/>
+
+        <TextView android:id="@+id/settings_profile_id"
+                  android:layout_width="wrap_content"
+                  android:layout_height="wrap_content"
+                  android:layout_margin="10dp"
+                  android:text="0"
+
+                  app:layout_constraintTop_toBottomOf="@id/settings_profile_id_text"
+                  app:layout_constraintLeft_toLeftOf="parent"/>
+
+    </androidx.constraintlayout.widget.ConstraintLayout>
+</FrameLayout>
